--- a/07-javascript/15-challenge-conditionals.html
+++ b/07-javascript/15-challenge-conditionals.html
@@ -170,7 +170,7 @@
                 <br>
                 <div class="calendar">
                     <h1 class="data"></h1>
-                    <div class="fecha"><input class="fechaNacimiento" type="number" placeholder="Ingrese su edad" min="8" required></div>
+                    <div class="fecha"><input class="fechaNacimiento" type="number" placeholder="Ingrese su edad" min="8" max="70" required></div>
                     <h1 class="edad">sdlkgosmg</h1>
                 </div>
                 <br>
