--- a/07-javascript/17-pokedex.html
+++ b/07-javascript/17-pokedex.html
@@ -25,9 +25,7 @@
                 <p class="title-init"></p>
             </div>
             <div class="pokemons">
-                <div class="chikorita"></div>
-                <div class="cyndaquil"></div>
-                <div class="totodile"></div>
+                <div class="pikachu"></div>
             </div>
             <div class="end">
                 <a class="submit" href="./17.2-pokedex.html"></a>
