--- a/07-javascript/17.2-pokedex.html
+++ b/07-javascript/17.2-pokedex.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex-api</title>
     <link rel="stylesheet" href="css/menu.css">
-    <link rel="stylesheet" href="css/pokedexCSS.css">
+    <link rel="stylesheet" href="css/pokedex.css">
 </head>
 
 <body>
