--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -34,6 +34,16 @@
             {url: '13-operators-logical.html', text: 'Operators Logical'},
             {url: '14-conditionals.html', text: 'Conditionals'},
             {url: '15-challenge-conditionals.html', text: 'Chanllenge Conditionals'},
+            {url: '16-loops.html', text: 'Loops'},
+            {url: '17-pokedex.html', text: 'Pokapi'},
+            {url: '18-events.html', text: 'Events'},
+            {url: '19-methods-string.html', text: 'Methods String'},
+            {url: '20-methods-numbers.html', text: 'Methods Numbers'},
+            {url: '21-methods-mathematics.html', text: 'Methods Mathematics'},
+            {url: '22-challengue-baloto.html', text: 'Baloto'},
+            {url: '23-.html', text: ''},
+            {url: '24-.html', text: ''},
+
 
 
         ]
