--- a/07-javascript/07-vehicle-objects.html
+++ b/07-javascript/07-vehicle-objects.html
@@ -299,7 +299,7 @@
             <div class="color"></div>
             
             <figure class="landscape">
-                <img src="" class="image">
+                <img  class="image">
                 <div class="sky">
                     <div class="sun">
                         <div class="edi1">
