--- a/07-javascript/07-vehicle-objects2.html
+++ b/07-javascript/07-vehicle-objects2.html
@@ -243,6 +243,10 @@
             </div>
         </section>
     </main>
-    
+    <script>
+        const dark = document.querySelector('button.dark')
+
+        dark.onclick
+    </script>
 </body>
 </html>
