--- a/07-javascript/index.html
+++ b/07-javascript/index.html
@@ -41,10 +41,13 @@
             {url: '20-methods-numbers.html', text: 'Methods Numbers'},
             {url: '21-methods-mathematics.html', text: 'Methods Mathematics'},
             {url: '22-challengue-baloto.html', text: 'Baloto'},
-            {url: '23-.html', text: ''},
-            {url: '24-.html', text: ''},
-
-
+            {url: '23-methods-dates.html', text: 'Methods Dates'},
+            {url: '24-methods-arrays.html', text: 'Methods Arrays'},
+            {url: '25-challenge-arrays.html', text: 'Challenge Arrays'},
+            {url: '26-events-time.html', text: 'Events Time'},
+            {url: '27-challenge-events-time.html', text: 'Challenge Events Time'},
+            {url: '28-pop-up-windows.html', text: '...'},
+            {url: '.html', text: '...'},
 
         ]
         links.forEach(renderlink)
